--- a/toms-electric/package.json
+++ b/toms-electric/package.json
@@ -8,8 +8,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3",
+    "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
