--- a/toms-electric/package.json
+++ b/toms-electric/package.json
@@ -8,6 +8,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-masonry-css": "^1.0.16",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
