--- a/amplify.yml
+++ b/amplify.yml
@@ -4,14 +4,15 @@ frontend:
     preBuild:
       commands:
         - cd toms-electric
-        - npm ci 
+        - npm install 
     build:
       commands:
+        - cd toms-electric
         - npm run build
   artifacts:
-    baseDirectory: build
+    baseDirectory: toms-electric/build
     files:
       - '**/*'
   cache:
     paths:
-      - node_modules/**/*
+      - toms-electric/node_modules/**/*
