--- a/toms-electric/public/manifest.json
+++ b/toms-electric/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tom's Electric",
+  "name": "Tom's Electric Inc. - Master Electrician in Suffolk County",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#f9c307",
+  "background_color": "#1e2022"
 }
